Se agregan varibles de entorno a workflow de github

--- a/.github/workflows/main_empeniovaluacion.yml
+++ b/.github/workflows/main_empeniovaluacion.yml
@@ -12,7 +12,10 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    env:
+      DB_EMPENIO_ARTICULOS_URI: ${{env.DB_EMPENIO_ARTICULOS_URI}}
+      DB_EMPENIO_ARTICULOS_DATABASE: ${{env.DB_EMPENIO_ARTICULOS_DATABASE}}
+      VALUACION_PORCENTAJE: ${{env.VALUACION_PORCENTAJE}}
     steps:
       - uses: actions/checkout@v4
 
