--- a/.github/workflows/main_empeniovaluacion.yml
+++ b/.github/workflows/main_empeniovaluacion.yml
@@ -13,9 +13,9 @@ jobs:
   build:
     runs-on: windows-latest
     env:
-      DB_EMPENIO_ARTICULOS_URI: ${{env.DB_EMPENIO_ARTICULOS_URI}}
-      DB_EMPENIO_ARTICULOS_DATABASE: ${{env.DB_EMPENIO_ARTICULOS_DATABASE}}
-      VALUACION_PORCENTAJE: ${{env.VALUACION_PORCENTAJE}}
+      DB_EMPENIO_ARTICULOS_URI: ${{secrets.DB_EMPENIO_ARTICULOS_URI}}
+      DB_EMPENIO_ARTICULOS_DATABASE: ${{secrets.DB_EMPENIO_ARTICULOS_DATABASE}}
+      VALUACION_PORCENTAJE: ${{secrets.VALUACION_PORCENTAJE}}
     steps:
       - uses: actions/checkout@v4
 
