--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ valuacion.porcentaje = ${VALUACION_PORCENTAJE:80}
 
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri= ${JWT_ISSUER_URI}
