--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri = ${DB_EMPENIO_ARTICULOS_URI}
 spring.data.mongodb.database = ${DB_EMPENIO_ARTICULOS_DATABASE}
 valuacion.porcentaje = ${VALUACION_PORCENTAJE:80}
+spring.security.oauth2.resourceserver.jwt.issuer-uri= ${JWT_ISSUER_URI}
